isBlank -> isEmpty